[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysha"
version = "0.1.2.1"
authors = [
  { name="MrMegaExpert", email="1arhacker1@gmail.com" },
]
description = "A New Born Python Micro Framework"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Arshiatmi/Pysha"
"Bug Tracker" = "https://github.com/Arshiatmi/Pysha/issues"